--- a/foundry.toml
+++ b/foundry.toml
@@ -62,8 +62,30 @@ anvil = "http://127.0.0.1:8545"
 mainnet = "${MAINNET_API_KEY}"
 sepolia = "${SEPOLIA_API_KEY}"
 
+# Lux Network Endpoints
+lux_mainnet = "http://127.0.0.1:9630/ext/bc/C/rpc"
+lux_testnet = "http://127.0.0.1:9640/ext/bc/C/rpc"
+lux_mainnet_public = "https://api.lux.network/ext/bc/C/rpc"
+lux_testnet_public = "https://api.testnet.lux.network/ext/bc/C/rpc"
+
+# Zoo Network Endpoints
+zoo_mainnet = "http://127.0.0.1:9630/ext/bc/Zoo/rpc"
+zoo_testnet = "http://127.0.0.1:9640/ext/bc/Zoo/rpc"
+zoo_mainnet_public = "https://api.zoo.network/ext/bc/Zoo/rpc"
+
+# Hanzo Network Endpoints
+hanzo_mainnet = "http://127.0.0.1:9630/ext/bc/Hanzo/rpc"
+hanzo_testnet = "http://127.0.0.1:9640/ext/bc/Hanzo/rpc"
+hanzo_mainnet_public = "https://api.hanzo.network/ext/bc/Hanzo/rpc"
+
 [etherscan]
 mainnet = { key = "${ETHERSCAN_API_KEY}" }
 sepolia = { key = "${ETHERSCAN_API_KEY}" }
+
+# Lux Network Explorers (Blockscout-compatible verification)
+lux_mainnet = { key = "${LUX_EXPLORER_API_KEY}", url = "https://explore.lux.network/api" }
+lux_testnet = { key = "${LUX_EXPLORER_API_KEY}", url = "https://explore.testnet.lux.network/api" }
+zoo_mainnet = { key = "${ZOO_EXPLORER_API_KEY}", url = "https://explore.zoo.network/api" }
+hanzo_mainnet = { key = "${HANZO_EXPLORER_API_KEY}", url = "https://explore.hanzo.network/api" }
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
