--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -51,6 +51,7 @@ jobs:
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
+        continue-on-error: true
         with:
           sarif_file: results.sarif
         if: always()
